add vcpkg for windows

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,8 @@ libc = { default-features = false, version = "0.2" }
 
 [build-dependencies]
 pkg-config = "0.3.16"
+bindgen = "0.68.1"
+
+
+[target.'cfg(windows)'.build-dependencies]
+vcpkg = "0.2.15"
